--- a/Ogma/Ogma.csproj
+++ b/Ogma/Ogma.csproj
@@ -9,7 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1"/>
         <PackageReference Include="MongoDB.Bson" Version="3.4.3"/>
-        <PackageReference Include="ZstdSharp.Port" Version="0.8.6"/>
+        <PackageReference Include="Snappier" Version="1.2.0" />
     </ItemGroup>
 
 </Project>
